# career-catalyst

./: .gitignore  README.md
backend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20241016175247_init/: migration.sql
backend/src/: app.ts
backend/src/controllers/: InternshipController.ts  me-controller.ts
backend/src/dtos/: InternshipQueryParams.ts
backend/src/lib/: auth.ts  logger.ts  prisma.ts
backend/src/middlewares/: CustomErrorHandler.ts  LoggingMiddleware.ts  authorizationChecker.ts
backend/src/repositories/: InternshipRepository.ts
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/(internships)/: layout.tsx
frontend/app/auth/: page.tsx
frontend/app/faq/: page.tsx
frontend/app/search/: layout.tsx  page.tsx
frontend/components/common/: NavSearch.tsx
frontend/components/layout/: Footer.tsx  Navbar.tsx
frontend/components/ui/: BrandImage.tsx  Button.tsx  Checkbox.tsx  Collapsible.tsx  Counter.tsx  Divider.tsx
frontend/content/: faqData.ts
frontend/hooks/: useClickOutside.ts
frontend/lib/: api.ts  auth-client.ts  axios.ts  definitions.ts  fetch-wrapper.ts  session.ts
frontend/utils/: createSearchParams.ts  filterInternships.ts  getPastelColor.ts
scraper/: .gitignore  main.py  pyproject.toml
scraper/scraper/: database.py  logger.py  models.py  scraper.py  scraper_config.py
scraper/scraper/providers/: internshala.py
(+28 files in other folders)
